--- a/MySportsDiary/Base.lproj/Main.storyboard
+++ b/MySportsDiary/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--New Entry-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="NewEventVC" customModule="MySportsDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -18,33 +18,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="record new event " textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="157" y="279" width="287" height="42"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="203" y="329" width="195" height="17"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RMk-kP-xtM">
+                                <rect key="frame" x="28" y="28" width="544" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="O8A-Oh-DHE"/>
+                                </constraints>
+                            </pickerView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" borderStyle="roundedRect" placeholder="Describe your event..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WFE-Kn-s1w">
+                                <rect key="frame" x="28" y="156" width="544" height="194"/>
+                                <color key="backgroundColor" red="0.89785987140000001" green="0.94141292570000001" blue="0.76126772170000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SyA-Y1-FTU">
+                                <rect key="frame" x="28" y="414" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ygi-D8-coT">
+                                <rect key="frame" x="526" y="414" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jde-9v-6E6">
+                                <rect key="frame" x="277" y="414" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rpw-Ru-cVB">
+                                <rect key="frame" x="20" y="513" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.68627450980000004" green="0.82352941180000006" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
+                            <constraint firstItem="SyA-Y1-FTU" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="8" id="1Cb-IG-8bX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RMk-kP-xtM" secondAttribute="trailing" constant="8" id="4Uf-ru-EMn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Rpw-Ru-cVB" secondAttribute="trailing" id="4qI-Y0-ae4"/>
+                            <constraint firstItem="RMk-kP-xtM" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="8" id="6ZI-Tu-XUy"/>
+                            <constraint firstItem="Jde-9v-6E6" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="6un-dy-20O"/>
+                            <constraint firstItem="WFE-Kn-s1w" firstAttribute="top" secondItem="RMk-kP-xtM" secondAttribute="bottom" constant="8" id="7jF-mY-CaM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WFE-Kn-s1w" secondAttribute="trailing" constant="8" id="AkA-mj-1cv"/>
+                            <constraint firstItem="Jde-9v-6E6" firstAttribute="centerY" secondItem="SyA-Y1-FTU" secondAttribute="centerY" id="Cph-1u-khc"/>
+                            <constraint firstItem="RMk-kP-xtM" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="8" id="O8c-hT-775"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ygi-D8-coT" secondAttribute="trailing" constant="8" id="Ok6-lU-scl"/>
+                            <constraint firstItem="WFE-Kn-s1w" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="8" id="QuZ-9G-z6c"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Rpw-Ru-cVB" secondAttribute="bottom" constant="8" id="TTe-M4-UjR"/>
+                            <constraint firstItem="Jde-9v-6E6" firstAttribute="centerY" secondItem="Ygi-D8-coT" secondAttribute="centerY" id="Y1f-Vm-gKu"/>
+                            <constraint firstItem="Jde-9v-6E6" firstAttribute="top" secondItem="WFE-Kn-s1w" secondAttribute="bottom" constant="64" id="bC0-sR-UH1"/>
+                            <constraint firstItem="Rpw-Ru-cVB" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="mDw-En-Mgq"/>
+                            <constraint firstItem="Jde-9v-6E6" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="394" id="uSL-kQ-sAc"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="New Entry" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="eventsPicker" destination="RMk-kP-xtM" id="Jyv-Y3-WQN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="280" y="-394"/>
+            <point key="canvasLocation" x="273" y="-391"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
